--- a/main.html
+++ b/main.html
@@ -479,7 +479,7 @@
             {
                 title: "Community Manager",
                 company: "Horizon Pack",
-                period: "June 2022 - September 2022",
+                period: "June 2022 - November 2022",
                 location: "Inezgane, Souss-Massa, Morocco",
                 responsibilities: [
                     "Streamlining social media presence",
@@ -834,7 +834,7 @@ function toggleDarkMode(setMode = null) {
   "Receiving and processing orders from new customers": "Receiving and processing orders from new customers",
   
   "Community Manager": "Community Manager",
-  "June 2022 - September 2022": "June 2022 - September 2022",
+  "June 2022 - November 2022": "June 2022 - November 2022",
   "Streamlining social media presence": "Streamlining social media presence",
   "Establishing company profiles on Google My Business and Meta Business Suite": "Establishing company profiles on Google My Business and Meta Business Suite",
   "Developing a WordPress website featuring product catalogs": "Developing a WordPress website featuring product catalogs",
@@ -968,7 +968,7 @@ function toggleDarkMode(setMode = null) {
   "Receiving and processing orders from new customers": "Réception et traitement des commandes des nouveaux clients.",
   
   "Community Manager": "Community Manager",
-  "June 2022 - September 2022": "Juin 2022 - Septembre 2022",
+  "June 2022 - November 2022": "Juin 2022 - Novembre 2022",
   "Streamlining social media presence": "Rationalisation de la présence sur les réseaux sociaux.",
   "Establishing company profiles on Google My Business and Meta Business Suite": "Création de profils d'entreprise sur Google My Business et Meta Business Suite.",
   "Developing a WordPress website featuring product catalogs": "Développement d'un site WordPress présentant des catalogues de produits.",
@@ -1101,7 +1101,7 @@ function toggleDarkMode(setMode = null) {
   "Receiving and processing orders from new customers": "Receiving and processing orders from new customers",
   
   "Community Manager": "Community Manager",
-  "June 2022 - September 2022": "يونيو 2022 - شتنبر 2022",
+  "June 2022 - November 2022": "يونيو 2022 - نونبر 2022",
   "Streamlining social media presence": "Streamlining social media presence",
   "Establishing company profiles on Google My Business and Meta Business Suite": "Establishing company profiles on Google My Business and Meta Business Suite",
   "Developing a WordPress website featuring product catalogs": "Developing a WordPress website featuring product catalogs",
@@ -1231,7 +1231,7 @@ function toggleDarkMode(setMode = null) {
 "Launching and monitoring of advertising campaigns on Meta and Google Ads platforms": "Launching and monitoring of advertising campaigns on Meta and Google Ads platforms",
 "Receiving and processing orders from new customers": "Receiving and processing orders from new customers",
 "Community Manager": "ⴰⵏⴱⴷⴰⴷ ⵏ ⵜⵎⴳⵔⴰⵡⵜ",
-"June 2022 - September 2022": "ⵢⵓⵏⵢⵓ 2022 - ⵛⵓⵜⴰⵏⴱⵉⵔ 2022",
+"June 2022 - November 2022": "ⵢⵓⵏⵢⵓ 2022 - ⵏⵓⵡⴰⵏⴱⵉⵔ 2022",
 "Streamlining social media presence": "Streamlining social media presence",
 "Establishing company profiles on Google My Business and Meta Business Suite": "Establishing company profiles on Google My Business and Meta Business Suite",
 "Developing a WordPress website featuring product catalogs": "Developing a WordPress website featuring product catalogs",
