--- a/main.html
+++ b/main.html
@@ -1179,7 +1179,7 @@ function toggleDarkMode(setMode = null) {
             "Light Mode": "ⴰⴷⴷⴰⴷ ⵉⴼⴰⵡⵏ",
             "Language": "ⵜⵓⵜⵍⴰⵢⵜ",
             "Marketing Graduate": "ⴰⵎⵔⵓⵣ ⵏ  ⵓⵙⴳⴷⵣ ⵣⵖ ⵜⵉⵏⵎⵍ ⵜⴰⵏⴰⵎⵓⵔⵜ ⵏ ⵓⵙⵖⵏⵣⵉ ⴷ ⵓⵙⵡⵓⴷⴷⵓ",
-            "Location": "ⵉⵏⵣⴳⴰⵏ, ⵙⵓⵙ-ⵎⴰⵙⵙⵜ, ⵍⵎⵖⵔⵉⴱ",
+            "Location": "ⵉⵏⵣⴳⴳⴰⵏ, ⵙⵓⵙ-ⵎⴰⵙⵙⵜ, ⵍⵎⵖⵔⵉⴱ",
             "Professional Summary": "ⵜⴰⴳⴹⵡⵉⵜ",
             "Summary Content": "ⴰⵎⵔⵓⵣ ⵏ  ⵓⵙⴳⴷⵣ ⵣⵖ ⵜⵉⵏⵎⵍ ⵜⴰⵏⴰⵎⵓⵔⵜ ⵏ ⵓⵙⵖⵏⵣⵉ ⴷ ⵓⵙⵡⵓⴷⴷⵓ ⵏ ⵓⴳⴰⴷⵉⵔ, ⴷⴰ ⵉⵙⵎⵓⵏⴰⵏ ⴳⵔ ⵜⵓⵙⵙⵏⴰ ⵜⴰⴽⴰⴷⵉⵎⵉⵜ ⵉⴷⵓⵙⵏ ⴳ ⵓⵙⴳⴷⵣ, ⴷ ⵉⵔⵉⵎ ⴰⵎⵙⴽⴰⵔ ⴳ ⵓⴳⴰⴷⴰⵣ ⵏ ⵜⵡⵓⵔⵉ. ⵉⴳⴰ ⴰⵎⵙⵙⴼⵙⴰⵢ ⵉⵥⴹⴰⵔⵏ ⵙⵓⵍ ⵉⵥⴹⴰⵔⵏ ⵉ ⵓⵍⵎⵎⵓⴷ, ⵎⴽ ⵉⵥⴹⴰⵔ ⵉ ⵜⵏⴰⵎⵉⵜ ⵅⴼ ⵉⵎⴰⵙⵙⵏ ⵉⵜⵉⴽⵏⵓⵍⵓⵊⵉⵢⵏ ⵉⵎⴰⵢⵏⵓⵜⵏ ⴷ ⵉⵙⵏⴼⴰⵍ ⵏ ⵜⵡⵏⵏⴰⴹ ⵏ ⵜⵡⵓⵔⵉ.",
             "Experience": "ⵉⵔⵉⵎ",
