--- a/main.html
+++ b/main.html
@@ -1181,7 +1181,7 @@ function toggleDarkMode(setMode = null) {
             "Marketing Graduate": "ⴰⵎⵔⵓⵣ ⵏ  ⵓⵙⴳⴷⵣ ⵣⵖ ⵜⵉⵏⵎⵍ ⵜⴰⵏⴰⵎⵓⵔⵜ ⵏ ⵓⵙⵖⵏⵣⵉ ⴷ ⵓⵙⵡⵓⴷⴷⵓ",
             "Location": "ⵉⵏⵣⴳⴳⴰⵏ, ⵙⵓⵙ-ⵎⴰⵙⵙⵜ, ⵍⵎⵖⵔⵉⴱ",
             "Professional Summary": "ⵜⴰⴳⴹⵡⵉⵜ",
-            "Summary Content": "ⴰⵎⵔⵓⵣ ⵏ  ⵓⵙⴳⴷⵣ ⵣⵖ ⵜⵉⵏⵎⵍ ⵜⴰⵏⴰⵎⵓⵔⵜ ⵏ ⵓⵙⵖⵏⵣⵉ ⴷ ⵓⵙⵡⵓⴷⴷⵓ ⵏ ⵓⴳⴰⴷⵉⵔ, ⴷⴰ ⵉⵙⵎⵓⵏⴰⵏ ⴳⵔ ⵜⵓⵙⵙⵏⴰ ⵜⴰⴽⴰⴷⵉⵎⵉⵜ ⵉⴷⵓⵙⵏ ⴳ ⵓⵙⴳⴷⵣ, ⴷ ⵉⵔⵉⵎ ⴰⵎⵙⴽⴰⵔ ⴳ ⵓⴳⴰⴷⴰⵣ ⵏ ⵜⵡⵓⵔⵉ. ⵉⴳⴰ ⴰⵎⵙⵙⴼⵙⴰⵢ ⵉⵥⴹⴰⵔⵏ ⵙⵓⵍ ⵉⵥⴹⴰⵔⵏ ⵉ ⵓⵍⵎⵎⵓⴷ, ⵎⴽ ⵉⵥⴹⴰⵔ ⵉ ⵜⵏⴰⵎⵉⵜ ⵅⴼ ⵉⵎⴰⵙⵙⵏ ⵉⵜⵉⴽⵏⵓⵍⵓⵊⵉⵢⵏ ⵉⵎⴰⵢⵏⵓⵜⵏ ⴷ ⵉⵙⵏⴼⴰⵍ ⵏ ⵜⵡⵏⵏⴰⴹ ⵏ ⵜⵡⵓⵔⵉ.",
+            "Summary Content": "ⴰⵎⵔⵓⵣ ⵏ  ⵓⵙⴳⴷⵣ ⵣⵖ ⵜⵉⵏⵎⵍ ⵜⴰⵏⴰⵎⵓⵔⵜ ⵏ ⵓⵙⵖⵏⵣⵉ ⴷ ⵓⵙⵡⵓⴷⴷⵓ ⵏ ⵓⴳⴰⴷⵉⵔ, ⴷⴰ ⵉⵙⵎⵓⵏⴰⵏ ⴳⵔ ⵜⵓⵙⵙⵏⴰ ⵜⴰⴽⴰⴷⵉⵎⵉⵜ ⵉⴷⵓⵙⵏ ⴳ ⵓⵙⴳⴷⵣ, ⴷ ⵉⵔⵉⵎ ⴰⵎⵙⴽⴰⵔ ⴳ ⵓⴳⴰⴷⴰⵣ ⵏ ⵜⵡⵓⵔⵉ. ⵉⴳⴰ ⴰⵎⵙⵙⴼⵙⴰⵢ ⵙⵓⵍ ⵉⵥⴹⴰⵔⵏ ⵉ ⵓⵍⵎⵎⵓⴷ, ⵎⴽ ⵉⵥⴹⴰⵔ ⵉ ⵜⵏⴰⵎⵉⵜ ⵅⴼ ⵉⵎⴰⵙⵙⵏ ⵉⵜⵉⴽⵏⵓⵍⵓⵊⵉⵢⵏ ⵉⵎⴰⵢⵏⵓⵜⵏ ⴷ ⵉⵙⵏⴼⴰⵍ ⵏ ⵜⵡⵏⵏⴰⴹ ⵏ ⵜⵡⵓⵔⵉ.",
             "Experience": "ⵉⵔⵉⵎ",
             "Education": "ⴰⵙⴳⵎⵉ",
             "Certifications": "ⵉⵙⴽⵍⵉⵏⵏ",
