--- a/main.html
+++ b/main.html
@@ -1230,7 +1230,7 @@ function toggleDarkMode(setMode = null) {
 "Collaborating with an external production team and overseeing video creation": "Collaborating with an external production team and overseeing video creation",
 "Launching and monitoring of advertising campaigns on Meta and Google Ads platforms": "Launching and monitoring of advertising campaigns on Meta and Google Ads platforms",
 "Receiving and processing orders from new customers": "Receiving and processing orders from new customers",
-"Community Manager": "ⴰⵏⴱⴷⴰⴷ ⵏ ⵜⵎⴳⵔⴰⵡⵜ",
+"Community Manager": "Community Manager",
 "June 2022 - November 2022": "ⵢⵓⵏⵢⵓ 2022 - ⵏⵓⵡⴰⵏⴱⵉⵔ 2022",
 "Streamlining social media presence": "Streamlining social media presence",
 "Establishing company profiles on Google My Business and Meta Business Suite": "Establishing company profiles on Google My Business and Meta Business Suite",
