--- a/main.html
+++ b/main.html
@@ -1241,8 +1241,8 @@ function toggleDarkMode(setMode = null) {
 "Master's degree in Marketing": "ⵎⴰⵙⵜⵔ ⴳ ⵓⵙⴳⴷⵣ",
 "National School of Business and Management in Agadir": "ⵜⵉⵏⵎⵍ ⵜⴰⵏⴰⵎⵓⵔⵜ ⵏ ⵓⵙⵖⵏⵣⵉ ⴷ ⵓⵙⵡⵓⴷⴷⵓ ⵏ ⵓⴳⴰⴷⵉⵔ",
 "2021 - 2024": "2021 - 2024",
-"Bac +2, Economics and Business - Scientific Option": "Bac +2, Economics and Business - Scientific Option",
-"CPGE - Classes préparatoires aux grandes écoles": "CPGE - Classes préparatoires aux grandes écoles",
+"Bac +2, Economics and Business - Scientific Option": "ⴱⴰⴽ +2, ⵜⴰⴷⴰⵎⵙⴰ ⴷ ⵓⵙⵖⵏⵣⵉ - ⵜⴰⵙⵎⵎⵙⵜⵉⵜ ⵜⴰⵎⴰⵙⵙⴰⵏⵜ",
+"CPGE - Classes préparatoires aux grandes écoles": "ⵜⵉⵎⵖⵔⵉⵜⵉⵏ ⵜⵉⵎⵙⵎⴰⵜⵜⴰⴳⵉⵏ ⵉ ⵜⵉⵏⵎⴰⵍ ⵜⵉⵎⵇⵇⵕⴰⵏⵉⵏ (CPGE), ⵕⵉⴹⴰ ⵙⵙⵍⴰⵡⵉ - ⴰⴳⴰⴷⵉⵔ",
 "2019 - 2021": "2019 - 2021",
 "Baccalaureate, Mathematical Sciences": "ⴱⴰⴽⴰⵍⵓⵔⵢⴰ, ⵜⵓⵙⵙⵏⴰ ⵏ ⵜⵓⵙⵏⴰⴽⵜ",
 "Abdallah Ibn Yassine High School - Inezgane": "ⴰⵙⵉⵏⴰⵏ ⵏ ⵓⵙⵎⴷⵉ ⵄⴱⴷⵍⵍⴰⵀ ⵓ ⵢⴰⵙⵉⵏ - ⵉⵏⵣⴳⴳⴰⵏ",
