--- a/main.html
+++ b/main.html
@@ -513,6 +513,8 @@
 
         const certifications = [
             { name: "Google Analytics Certification", link: "https://skillshop.credential.net/d6c9f066-29bc-4a2b-9368-5f91abfefc6b" },
+			{ name: "Google Ads Video Certification", link: "https://skillshop.credential.net/da80e0ee-b190-4396-87f1-95faac149ad7" },
+			{ name: "ALX AiCE - AI Career Essentials", link: "https://intranet.alxswe.com/certificates/5x69fmzyXR" },
             { name: "LinkedIn Marketing Solutions Fundamentals", link: "https://verify.skilljar.com/c/m8ywwzkqvfax" },
             { name: "Semrush SEO Crash Course", link: "https://static.semrush.com/academy/certificates/d1264bc907/anir-ouafi_2.pdf" }
         ];
@@ -1409,3 +1411,4 @@ window.onload = function() {
     </div>
 </body>
 </html>
+
