--- a/main.html
+++ b/main.html
@@ -976,7 +976,7 @@ function toggleDarkMode(setMode = null) {
   "Microsoft PowerPoint": "Microsoft PowerPoint",
   "SQL": "SQL",
          "Anir Ouafi": "Anir Ouafi",
-        "Footer Text": "This webpage was entirely developed from scratch by me, Anir Ouafi, using AI."
+        "Footer Text": "This webpage is developed by Anir Ouafi."
 
             },
             fr: {
@@ -1111,7 +1111,7 @@ function toggleDarkMode(setMode = null) {
   "Microsoft PowerPoint": "Microsoft PowerPoint",
   "SQL": "SQL",
           "Anir Ouafi": "Anir Ouafi",
-        "Footer Text": "Cette page web a été entièrement développée par moi, Anir Ouafi, en utilisant l'IA."
+        "Footer Text": "Cette page web a été développée par Anir Ouafi"
 
             },
             ar: {
@@ -1245,7 +1245,7 @@ function toggleDarkMode(setMode = null) {
   "Microsoft PowerPoint": "مايكروسوفت باوربوينت",
   "SQL": "SQL",
           "Anir Ouafi": "أنير وافي",
-        "Footer Text": "تم تطوير هذه الصفحة بالكامل من الصفر بواسطتي، أنير وافي، باستخدام الذكاء الاصطناعي."
+        "Footer Text": "تم تطوير هذه الصفحة من طرف أنير وافي."
 
             },
             zgh: {
@@ -1374,7 +1374,7 @@ function toggleDarkMode(setMode = null) {
   "Microsoft PowerPoint": "Microsoft PowerPoint",
   "SQL": "SQL",
           "Anir Ouafi": "ⴰⵏⵉⵔ ⵡⴰⴼⵉ",
-        "Footer Text": "ⵜⴰⵙⵏⴰ ⴰⴷ ⵜⵜⵢⴰⵡⵙⴽⴰⵔ ⵙⴳ ⵓⵎⵢⴰ ⵙ ⵓⴼⵓⵙ ⵉⵏⵓ ⵏⴽⴽⵉ, ⴰⵏⵉⵔ ⵡⴰⴼⵉ, ⵙ ⵓⵎⵢⴰⵡⴰⵙ ⵏ ⵜⵉⵖⵉⵙⵜ ⵜⵉⵎⵥⵍⵉⵜ."
+        "Footer Text": "ⵜⴰⵙⵏⴰ ⴰⴷ ⵉⵙⴽⵔ ⵜⵜ ⴰⵏⵉⵔ ⵡⴰⴼⵉ."
 
             }
         }
@@ -1470,7 +1470,7 @@ window.onload = function() {
 };
     </script>
     <div style="width: 100%; text-align: center;">
-        <p data-translate="Footer Text">This webpage was entirely developed from scratch by me, Anir Ouafi, using AI.</p>
+        <p data-translate="Footer Text">This webpage is developed by Anir Ouafi.</p>
         <div class="social-icons" style="margin-top: 10px;">
             <a href="mailto:ouafianir@gmail.com" target="_blank" class="icon-link">
                 <i class="fas fa-envelope"></i>
@@ -1485,5 +1485,6 @@ window.onload = function() {
     </div>
 </body>
 </html>
+
 
 
