--- a/main.html
+++ b/main.html
@@ -864,8 +864,11 @@ function toggleDarkMode(setMode = null) {
                 "French": "French: Professional proficiency",
                 "English": "English: Professional proficiency",
                 "Spanish": "Spanish: Elementary",
+				"View some examples": "View some examples",
                 "View Credential": "View Credential",
                 "View Final Year Project Details": "View Final Year Project Details",
+				"Hide the examples": "Hide the examples",
+				"Hide Final Year Project Details": "Hide Final Year Project Details",
                 "Final Year Research Project": "Final Year Research Project",
                 "Project Theme": "Theme: \"Content Marketing Effectiveness in The Moroccan Context: Evaluation and Analysis\"",
                 "Project Period": "Period: Mar 2024 - May 2024",
@@ -894,7 +897,7 @@ function toggleDarkMode(setMode = null) {
   "Evaluating website user experience and assisting with SEO improvements": "Evaluating website user experience and assisting with SEO improvements",
   "Observing advertising campaign management": "Observing advertising campaign management",
   "Assisting models with script memorization and delivery": "Assisting models with script memorization and delivery",
-  "View some examples": "View some examples",
+  
   
   "Advertising Campaign Manager and Seller": "Advertising Campaign Manager and Seller",
   "Horizon Pack": "Horizon Pack",
@@ -998,9 +1001,11 @@ function toggleDarkMode(setMode = null) {
                 "French": "Français : Maîtrise professionnelle",
                 "English": "Anglais : Maîtrise professionnelle",
                 "Spanish": "Espagnol : Élémentaire",
+				"View some examples": "Voir quelques exemples",
                 "View Credential": "Voir la référence",
                 "View Final Year Project Details": "Voir les détails du projet de fin d'études",
-				
+				"Hide the examples": "Masquer les exemples",
+				"Hide Final Year Project Details": "Masquer les détails du projet de fin d'études",
                 "Final Year Research Project": "Final Year Research Project",
                 "Project Theme": "Theme: \"Content Marketing Effectiveness in The Moroccan Context: Evaluation and Analysis\"",
                 "Project Period": "Period: Mar 2024 - May 2024",
@@ -1029,7 +1034,7 @@ function toggleDarkMode(setMode = null) {
   "Evaluating website user experience and assisting with SEO improvements": "Évaluation de l'expérience utilisateur des sites web, et assistance aux améliorations du référencement (SEO).",
   "Observing advertising campaign management": "Observation de la gestion des campagnes publicitaires.",
   "Assisting models with script memorization and delivery": "Assistance des acteurs dans la mémorisation et l'exécution des scripts.",
-  "View some examples": "Voir quelques exemples",
+  
 				
   "Advertising Campaign Manager and Seller": "Responsable de Campagne Publicitaire et Vendeur",
   "Horizon Pack": "Horizon Pack",
@@ -1136,6 +1141,8 @@ function toggleDarkMode(setMode = null) {
                 "View Credential": "عرض الاعتماد",
 				"View some examples": "عرض بعض الأمثلة",
                 "View Final Year Project Details": "عرض تفاصيل مشروع السنة النهائية",
+				"Hide the examples": "إخفاء الأمثلة",
+				"Hide Final Year Project Details": "إخفاء تفاصيل مشروع السنة النهائية",
                 "Final Year Research Project": "Final Year Research Project",
                 "Project Theme": "Theme: \"Content Marketing Effectiveness in The Moroccan Context: Evaluation and Analysis\"",
                 "Project Period": "Period: Mar 2024 - May 2024",
@@ -1270,6 +1277,8 @@ function toggleDarkMode(setMode = null) {
             "View Credential": "ⵥⵕ ⵜⴰⵙⵖⵣⵏⵜ",
 			"View some examples": "ⵥⵕ ⴽⵔⴰ ⵏ ⵉⵙⵎⴷⵢⴰⵜⵏ",
             "View Final Year Project Details": "ⵥⵕ ⵉⴼⵔⵓⵔⵉⵜⵏ ⵏ ⵓⵙⵏⵜⵉ ⵏ ⵓⵙⴳⴳⵯⴰⵙ ⴰⵎⴳⴳⴰⵔⵓ",
+				"Hide the examples": "ⵙⵙⵏⵜⵍ ⵉⵙⵎⴷⵢⴰⵜⵏ",
+				"Hide Final Year Project Details": "ⵙⵙⵏⵜⵍ ⵉⴼⵔⵓⵔⵉⵜⵏ ⵏ ⵓⵙⵏⵜⵉ ⵏ ⵓⵙⴳⴳⵯⴰⵙ ⴰⵎⴳⴳⴰⵔⵓ",
                 "Final Year Research Project": "Final Year Research Project",
                 "Project Theme": "Theme: \"Content Marketing Effectiveness in The Moroccan Context: Evaluation and Analysis\"",
                 "Project Period": "Period: Mar 2024 - May 2024",
@@ -1485,3 +1494,4 @@ window.onload = function() {
     </div>
 </body>
 </html>
+
