--- a/main.html
+++ b/main.html
@@ -765,7 +765,7 @@ function populateExperience() {
 					    requestArticleButton.style.backgroundColor = '#dc2626';
 					});
 					requestArticleButton.addEventListener('click', () => {
-					    window.open('https://contentmarketing.carrd.co/', '_blank');
+					    window.open('https://ouafianir.wixsite.com/content-marketing', '_blank');
 					});
 					projectDetails.appendChild(requestArticleButton);
 					
@@ -1522,6 +1522,7 @@ window.onload = function() {
     </div>
 </body>
 </html>
+
 
 
 
