--- a/main.html
+++ b/main.html
@@ -897,6 +897,7 @@ function toggleDarkMode(setMode = null) {
                 "View Final Year Project Details": "View Final Year Project Details",
 				"Hide the examples": "Hide the examples",
 				"Hide Final Year Project Details": "Hide Final Year Project Details",
+				"Request full article": "Request full article",
                 "Final Year Research Project": "Final Year Research Project",
                 "Project Theme": "Theme: \"Content Marketing Effectiveness in The Moroccan Context: Evaluation and Analysis\"",
                 "Project Period": "Period: Mar 2024 - May 2024",
@@ -1034,6 +1035,7 @@ function toggleDarkMode(setMode = null) {
                 "View Final Year Project Details": "Voir les détails du projet de fin d'études",
 				"Hide the examples": "Masquer les exemples",
 				"Hide Final Year Project Details": "Masquer les détails du projet de fin d'études",
+				"Request full article": "Demander l'article complet",
                 "Final Year Research Project": "Final Year Research Project",
                 "Project Theme": "Theme: \"Content Marketing Effectiveness in The Moroccan Context: Evaluation and Analysis\"",
                 "Project Period": "Period: Mar 2024 - May 2024",
@@ -1171,6 +1173,7 @@ function toggleDarkMode(setMode = null) {
                 "View Final Year Project Details": "عرض تفاصيل مشروع السنة النهائية",
 				"Hide the examples": "إخفاء الأمثلة",
 				"Hide Final Year Project Details": "إخفاء تفاصيل مشروع السنة النهائية",
+				"Request full article": "اطلب البحث كاملا",
                 "Final Year Research Project": "Final Year Research Project",
                 "Project Theme": "Theme: \"Content Marketing Effectiveness in The Moroccan Context: Evaluation and Analysis\"",
                 "Project Period": "Period: Mar 2024 - May 2024",
@@ -1307,6 +1310,7 @@ function toggleDarkMode(setMode = null) {
             "View Final Year Project Details": "ⵥⵕ ⵉⴼⵔⵓⵔⵉⵜⵏ ⵏ ⵓⵙⵏⵜⵉ ⵏ ⵓⵙⴳⴳⵯⴰⵙ ⴰⵎⴳⴳⴰⵔⵓ",
 				"Hide the examples": "ⵙⵙⵏⵜⵍ ⵉⵙⵎⴷⵢⴰⵜⵏ",
 				"Hide Final Year Project Details": "ⵙⵙⵏⵜⵍ ⵉⴼⵔⵓⵔⵉⵜⵏ ⵏ ⵓⵙⵏⵜⵉ ⵏ ⵓⵙⴳⴳⵯⴰⵙ ⴰⵎⴳⴳⴰⵔⵓ",
+				"Request full article": "ⵜⵜⵔ ⴰⵎⵏⵏⵓ ⵓⵙⵎⵉⴷ",
                 "Final Year Research Project": "Final Year Research Project",
                 "Project Theme": "Theme: \"Content Marketing Effectiveness in The Moroccan Context: Evaluation and Analysis\"",
                 "Project Period": "Period: Mar 2024 - May 2024",
@@ -1522,6 +1526,7 @@ window.onload = function() {
     </div>
 </body>
 </html>
+
 
 
 
