--- a/main.html
+++ b/main.html
@@ -538,9 +538,9 @@
 
 		const horizonExamples = [
 		    { url: "https://www.instagram.com/p/CvSD1BNBwWt/embed" },
-		    { url: "https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto%2F%3Ffbid%3D302140442392003%26set%3Decnf.100077881491713&show_text=false&width=500" },
+		    { url: "https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto%2F%3Ffbid%3D302140355725345%26set%3Dpcb.302141625725218&show_text=false&width=500" },
 		    { url: "https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto.php%3Ffbid%3D312519474687433%26set%3Dpb.100077881491713.-2207520000&show_text=false&width=500" },
-		    { url: "https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto.php%3Ffbid%3D302140402392007%26set%3Dpb.100077881491713.-2207520000&show_text=false&width=500" },
+		    { url: "https://www.instagram.com/p/CkHeFIvoPst/embed" },
 		    { url: "https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FHorizonPack%2Fphotos%2Fpb.100077881491713.-2207520000%2F177712994791048&show_text=false&width=500" }
 		];
 		
@@ -548,7 +548,7 @@
 		    "https://www.instagram.com/horizon.pack/reel/CvSD1BNBwWt/",
 		    "https://web.facebook.com/photo/?fbid=302140442392003&set=ecnf.100077881491713",
 		    "https://web.facebook.com/photo.php?fbid=312519474687433&set=pb.100077881491713.-2207520000&type=3",
-		    "https://web.facebook.com/photo.php?fbid=302140402392007&set=pb.100077881491713.-2207520000&type=3",
+		    "https://www.instagram.com/horizon.pack/p/CkHeFIvoPst/",
 		    "https://web.facebook.com/HorizonPack/photos/pb.100077881491713.-2207520000/177712994791048/?type=3"
 		];
 
@@ -1547,4 +1547,5 @@ window.onload = function() {
     </div>
 </body>
 </html>
+
 
