--- a/main.html
+++ b/main.html
@@ -538,7 +538,7 @@
 
 		const horizonExamples = [
 		    { url: "https://www.instagram.com/p/CvSD1BNBwWt/embed" },
-		    { url: "https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto%2F%3Ffbid%3D302140355725345%26set%3Dpcb.302141625725218&show_text=false&width=500" },
+		    { url: "https://www.facebook.com/plugins/photo.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto%2F%3Ffbid%3D302140355725345%26set%3Dpcb.302141625725218&show_text=false&width=500" },
 		    { url: "https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto.php%3Ffbid%3D312519474687433%26set%3Dpb.100077881491713.-2207520000&show_text=false&width=500" },
 		    { url: "https://www.instagram.com/p/CkHeFIvoPst/embed" },
 		    { url: "https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FHorizonPack%2Fphotos%2Fpb.100077881491713.-2207520000%2F177712994791048&show_text=false&width=500" }
@@ -1547,5 +1547,6 @@ window.onload = function() {
     </div>
 </body>
 </html>
+
 
 
