--- a/main.html
+++ b/main.html
@@ -969,8 +969,8 @@ function toggleDarkMode(setMode = null) {
   "Generating commercial posts featuring company products through photography and editing": "Generating commercial posts featuring company products through photography and editing",
   "Managing online engagement by responding to messages and comments": "Managing online engagement by responding to messages and comments",
 
-				"MediaManExamplesDescription": "MediaManExamplesDescription",
-				"HorizonPackExamplesDescription": "HorizonPackExamplesDescription",
+				"MediaManExamplesDescription": "During my internship at Media Man, I wrote/participated in writing scripts and/or storyboards for videos including the following:",
+				"HorizonPackExamplesDescription": "During my internship at Horizon Pack, I wrote the script and storyboard, appeared in the following video, and photographed products for posts and catalogs such as the following:",
 
   // Education translations
   "Master's degree in Marketing": "Master's degree in Marketing",
@@ -1114,8 +1114,8 @@ function toggleDarkMode(setMode = null) {
 
 
 
-				"MediaManExamplesDescription": "MediaManExamplesDescription",
-				"HorizonPackExamplesDescription": "HorizonPackExamplesDescription",
+				"MediaManExamplesDescription": "Durant mon stage chez Media Man, j’ai rédigé/participé à la rédaction de scripts et/ou de storyboards pour des vidéos, y compris les suivantes :",
+				"HorizonPackExamplesDescription": "Durant mon stage chez Horizon Pack, j’ai rédigé le script et le storyboard et ai figuré dans la vidéo suivante, et j’ai également réalisé des photos de produits pour créer des postes et catalogues, y compris les suivants :",
 					
   // Education translations
   "Master's degree in Marketing": "Master en Marketing",
@@ -1254,8 +1254,8 @@ function toggleDarkMode(setMode = null) {
   "Generating commercial posts featuring company products through photography and editing": "Generating commercial posts featuring company products through photography and editing",
   "Managing online engagement by responding to messages and comments": "Managing online engagement by responding to messages and comments",
 
-				"MediaManExamplesDescription": "MediaManExamplesDescription",
-				"HorizonPackExamplesDescription": "HorizonPackExamplesDescription",
+				"MediaManExamplesDescription": "During my internship at Media Man, I wrote/participated in writing scripts and/or storyboards for videos including the following:",
+				"HorizonPackExamplesDescription": "During my internship at Horizon Pack, I wrote the script and storyboard, appeared in the following video, and photographed products for posts and catalogs such as the following:",
 
   // Education translations
   "Master's degree in Marketing": "ماجستير في التسويق",
@@ -1391,8 +1391,8 @@ function toggleDarkMode(setMode = null) {
 "Generating commercial posts featuring company products through photography and editing": "Generating commercial posts featuring company products through photography and editing",
 "Managing online engagement by responding to messages and comments": "Managing online engagement by responding to messages and comments",
 
-				"MediaManExamplesDescription": "MediaManExamplesDescription",
-				"HorizonPackExamplesDescription": "HorizonPackExamplesDescription",
+				"MediaManExamplesDescription": "During my internship at Media Man, I wrote/participated in writing scripts and/or storyboards for videos including the following:",
+				"HorizonPackExamplesDescription": "During my internship at Horizon Pack, I wrote the script and storyboard, appeared in the following video, and photographed products for posts and catalogs such as the following:",
 				
 // Education translations
 "Master's degree in Marketing": "ⵎⴰⵙⵜⵔ ⴳ ⵓⵙⴳⴷⵣ",
@@ -1566,6 +1566,7 @@ window.onload = function() {
     </div>
 </body>
 </html>
+
 
 
 
