--- a/main.html
+++ b/main.html
@@ -524,16 +524,22 @@
 
 		const examples = [
 		    { url: "https://www.instagram.com/p/C8FVeAZNjnB/embed" },
+			{ url: "https://www.instagram.com/p/C-gFpKDt2yb/embed" },
+			{ url: "https://www.instagram.com/p/C4TAmjwNShh/embed" },
+			{ url: "https://drive.google.com/file/d/1oyxHTZ_vLB3d3VmiQI4qYYV-b2zntD06/preview" },
 		    { url: "https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FAGANET.agadir%2Fvideos%2F439751238595771%2F&show_text=false&width=560&t=0" },
-		    { url: "https://www.instagram.com/p/C4TAmjwNShh/embed" },
-		    { url: "https://www.instagram.com/p/C-gFpKDt2yb/embed" }
+		    { url: "https://drive.google.com/file/d/1BFzuhJacFnhjAKQwykFkQX8a76fx3JK4/preview" },
+			{ url: "https://drive.google.com/file/d/1mxgtfVQY3Zwai7ANV3Hf3kfHyDQrm5vL/preview" }
 		];
 		
 		const exampleLinks = [
 		    "https://www.instagram.com/p/C8FVeAZNjnB/",
+			"https://www.instagram.com/p/C-gFpKDt2yb/",
+			"https://www.instagram.com/p/C4TAmjwNShh/",
+			"https://drive.google.com/file/d/1oyxHTZ_vLB3d3VmiQI4qYYV-b2zntD06/view"
 		    "https://www.facebook.com/AGANET.agadir/videos/439751238595771",
-		    "https://www.instagram.com/p/C4TAmjwNShh/",
-		    "https://www.instagram.com/p/C-gFpKDt2yb/"
+			"https://drive.google.com/file/d/1BFzuhJacFnhjAKQwykFkQX8a76fx3JK4/view",
+			"https://drive.google.com/file/d/1mxgtfVQY3Zwai7ANV3Hf3kfHyDQrm5vL/view"
 		];
 
 		const horizonExamples = [
@@ -1566,6 +1572,7 @@ window.onload = function() {
     </div>
 </body>
 </html>
+
 
 
 
