--- a/index.html
+++ b/index.html
@@ -423,6 +423,16 @@
                     <i class="fab fa-linkedin"></i>
                 </a>
             </div>
+
+			<button class="skill-button"
+			        data-translate="View Portfolio"
+			        style="background-color:#dc2626;color:white;border:none;padding:0.5rem 1rem;border-radius:20px;cursor:pointer;margin-top:0.5rem;"
+			        onmouseover="this.style.backgroundColor='#991b1b'"
+			        onmouseout="this.style.backgroundColor='#dc2626'"
+			        onclick="(function(){const w = window.open('https://anirouafi.github.io/CV/portfolio.html','_blank'); if (w) w.opener = null; })()">
+			    view portfolio
+			</button>
+
         </header>
 
         <section class="section" id="summary">
