--- a/portfolio.html
+++ b/portfolio.html
@@ -338,8 +338,8 @@ const caseStudies = [
     ],
     examples: [
       { url: 'https://www.instagram.com/p/CvSD1BNBwWt/embed', link: 'https://www.instagram.com/horizon.pack/reel/CvSD1BNBwWt/' },
-      { url: 'https://www.facebook.com/plugins/photo.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto%2F%3Ffbid%3D302140355725345%26set%3Dpcb.302141625725218&show_text=false&width=500', link: 'https://web.facebook.com/photo/?fbid=302140355725345&set=pcb.302141625725218' },
-      { url: 'https://drive.google.com/file/d/1oyxHTZ_vLB3d3VmiQI4qYYV-b2zntD06/preview', link: 'https://drive.google.com/file/d/1oyxHTZ_vLB3d3VmiQI4qYYV-b2zntD06/view?usp=drive_link' },
+      { url: 'https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto%2F%3Ffbid%3D302140355725345%26set%3Dpcb.302141625725218&show_text=false&width=500', link: 'https://web.facebook.com/photo/?fbid=302140442392003&set=ecnf.100077881491713' },
+      { url: 'https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto.php%3Ffbid%3D312519474687433%26set%3Dpb.100077881491713.-2207520000&show_text=false&width=500', link: 'https://web.facebook.com/photo.php?fbid=312519474687433&set=pb.100077881491713.-2207520000&type=3' },
       { url: 'https://www.instagram.com/p/CkHeFIvoPst/embed', link: 'https://www.instagram.com/horizon.pack/p/CkHeFIvoPst/' },
       { url: 'https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FHorizonPack%2Fphotos%2Fpb.100077881491713.-2207520000%2F177712994791048&show_text=false&width=500', link: 'https://web.facebook.com/HorizonPack/photos/pb.100077881491713.-2207520000/177712994791048/?type=3' }
     ],
